fixed alignment

--- a/style.css
+++ b/style.css
@@ -486,6 +486,13 @@ gap: 50px;
     width: 22%;
     transition: all 0.4s;
     /* height: 100%; */
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* align-items: baseline; */
+    /* align-content: space-between; */
 }
 .trip_card:hover {
     transform: scale(1.05);
@@ -513,12 +520,19 @@ gap: 50px;
     /* position: absolute;
     bottom: 50%; */
     /* height: 50%; */
+
+
+
+    
+
+
 }
 .trip_info > p {
     padding-top: 10px;
     /* text-align: justify; */
     /* text-justify: inter-ideograph; */
     height: fit-content;
+    /* position: relative; */
 }
 
 .trip_footer {
@@ -532,7 +546,7 @@ gap: 50px;
     margin-top: 1rem;
     /* padding: 0; */
     /* position: absolute;
-    bottom: 0; */
+    bottom: -10%; */
 }
 .trip_footer a {
     /* display: block; */
